chore: fork and update to Minecraft 26.2
- v1.8.0 & Java 25
- Chinese localization
- update dependencies