@@ -1,34 +1,41 @@
 package semmiedev.disc_jockey;
 
 import net.fabricmc.fabric.api.client.event.lifecycle.v1.ClientTickEvents;
-import net.minecraft.block.Block;
-import net.minecraft.block.BlockState;
-import net.minecraft.block.Blocks;
-import net.minecraft.block.enums.NoteBlockInstrument;
-import net.minecraft.client.MinecraftClient;
-import net.minecraft.client.gui.hud.ChatHud;
-import net.minecraft.client.network.ClientPlayerEntity;
-import net.minecraft.client.network.PlayerListEntry;
-import net.minecraft.client.world.ClientWorld;
-import net.minecraft.network.packet.c2s.play.PlayerActionC2SPacket;
-import net.minecraft.network.packet.c2s.play.PlayerMoveC2SPacket;
-import net.minecraft.state.property.Properties;
-import net.minecraft.text.Text;
-import net.minecraft.util.Formatting;
-import net.minecraft.util.Hand;
-import net.minecraft.util.Pair;
-import net.minecraft.util.hit.BlockHitResult;
-import net.minecraft.util.math.*;
-import net.minecraft.world.GameMode;
-import org.apache.commons.lang3.NotImplementedException;
+import net.minecraft.ChatFormatting;
+import net.minecraft.client.Minecraft;
+import net.minecraft.client.gui.components.ChatComponent;
+import net.minecraft.client.multiplayer.ClientLevel;
+import net.minecraft.client.multiplayer.PlayerInfo;
+import net.minecraft.client.player.LocalPlayer;
+import net.minecraft.core.BlockPos;
+import net.minecraft.core.Direction;
+import net.minecraft.network.chat.Component;
+import net.minecraft.network.protocol.game.ServerboundMovePlayerPacket;
+import net.minecraft.network.protocol.game.ServerboundPlayerActionPacket;
+import net.minecraft.util.Mth;
+import net.minecraft.world.InteractionHand;
+import net.minecraft.world.level.GameType;
+import net.minecraft.world.level.block.Block;
+import net.minecraft.world.level.block.Blocks;
+import net.minecraft.world.level.block.state.BlockState;
+import net.minecraft.world.level.block.state.properties.BlockStateProperties;
+import net.minecraft.world.level.block.state.properties.NoteBlockInstrument;
+import net.minecraft.world.phys.AABB;
+import net.minecraft.world.phys.BlockHitResult;
+import net.minecraft.world.phys.Vec3;
 import org.jetbrains.annotations.NotNull;
 import org.jetbrains.annotations.Nullable;
+import org.jspecify.annotations.NonNull;
 
 import java.util.ArrayList;
 import java.util.HashMap;
 import java.util.Map;
 
-public class SongPlayer implements ClientTickEvents.StartWorldTick {
+import static net.minecraft.ChatFormatting.RED;
+
+public class SongPlayer implements ClientTickEvents.StartLevelTick {
+    private record NotePrediction(int assumedNote, long expiryTime) {}
+
     private static boolean warned;
     public boolean running;
     public Song song;
@@ -42,8 +49,6 @@ public class SongPlayer implements ClientTickEvents.StartWorldTick {
     // Used to check and enforce packet rate limits to not get kicked
     private long last100MsSpanAt = -1L;
     private int last100MsSpanEstimatedPackets = 0;
-    // At how many packets/100ms should the player just reduce / stop sending packets for a while
-    final private int last100MsReducePacketsAfter = 300 / 10, last100MsStopPacketsAfter = 450 / 10;
     // If higher than current millis, don't send any packets of this kind (temp disable)
     private long reducePacketsUntil = -1L, stopPacketsUntil = -1L;
 
@@ -60,7 +65,7 @@ public class SongPlayer implements ClientTickEvents.StartWorldTick {
     private long lastInteractAt = -1;
     private float availableInteracts = 8;
     private int tuneInitialUntunedBlocks = -1;
-    private HashMap<BlockPos, Pair<Integer, Long>> notePredictions = new HashMap<>();
+    private final HashMap<BlockPos, NotePrediction> notePredictions = new HashMap<>();
     public boolean didSongReachEnd = false;
     public boolean loopSong = false;
     private long pausePlaybackUntil = -1L; // Set after tuning, if configured
@@ -71,14 +76,13 @@ public class SongPlayer implements ClientTickEvents.StartWorldTick {
 
     public @NotNull HashMap<NoteBlockInstrument, @Nullable NoteBlockInstrument> instrumentMap = new HashMap<>(); // Toy
     public synchronized void startPlaybackThread() {
-        if(Main.config.disableAsyncPlayback) {
+        if (Main.config.disableAsyncPlayback) {
             playbackThread = null;
             return;
         }
 
-        this.playbackThread = new Thread(() -> {
-            Thread ownThread = this.playbackThread;
-            while(ownThread == this.playbackThread) {
+        this.playbackThread = Thread.startVirtualThread(() -> {
+            while (this.playbackThread == Thread.currentThread()) {
                 try {
                     // Accuracy doesn't really matter at this precision imo
                     Thread.sleep(playbackLoopDelay);
@@ -88,7 +92,6 @@ public class SongPlayer implements ClientTickEvents.StartWorldTick {
                 tickPlayback();
             }
         });
-        this.playbackThread.start();
     }
 
     public synchronized void stopPlaybackThread() {
@@ -97,7 +100,7 @@ public class SongPlayer implements ClientTickEvents.StartWorldTick {
 
     public synchronized void start(Song song) {
         if (!Main.config.hideWarning && !warned) {
-            MinecraftClient.getInstance().inGameHud.getChatHud().addMessage(Text.translatable("disc_jockey.warning").formatted(Formatting.BOLD, Formatting.RED));
+            Minecraft.getInstance().gui.hud.getChat().addClientSystemMessage(Component.translatable("disc_jockey.warning").copy().withStyle(ChatFormatting.BOLD).withStyle(RED));
             warned = true;
             return;
         }
@@ -105,7 +108,7 @@ public class SongPlayer implements ClientTickEvents.StartWorldTick {
         this.song = song;
         //Main.LOGGER.info("Song length: " + song.length + " and tempo " + song.tempo);
         //Main.TICK_LISTENERS.add(this);
-        if(this.playbackThread == null) startPlaybackThread();
+        if (this.playbackThread == null) startPlaybackThread();
         running = true;
         lastPlaybackTickAt = System.currentTimeMillis();
         last100MsSpanAt = System.currentTimeMillis();
@@ -146,21 +149,21 @@ public class SongPlayer implements ClientTickEvents.StartWorldTick {
         }
         long previousPlaybackTickAt = lastPlaybackTickAt;
         lastPlaybackTickAt = System.currentTimeMillis();
-        if(last100MsSpanAt != -1L && System.currentTimeMillis() - last100MsSpanAt >= 100) {
+        if (last100MsSpanAt != -1L && System.currentTimeMillis() - last100MsSpanAt >= 100) {
             last100MsSpanEstimatedPackets = 0;
             last100MsSpanAt = System.currentTimeMillis();
-        }else if (last100MsSpanAt == -1L) {
+        } else if (last100MsSpanAt == -1L) {
             last100MsSpanAt = System.currentTimeMillis();
             last100MsSpanEstimatedPackets = 0;
         }
-        if(noteBlocks != null && tuned) {
-            if(pausePlaybackUntil != -1L && System.currentTimeMillis() <= pausePlaybackUntil) return;
+        if (noteBlocks != null && tuned) {
+            if (pausePlaybackUntil != -1L && System.currentTimeMillis() <= pausePlaybackUntil) return;
             while (running) {
-                MinecraftClient client = MinecraftClient.getInstance();
-                GameMode gameMode = client.interactionManager == null ? null : client.interactionManager.getCurrentGameMode();
+                Minecraft client = Minecraft.getInstance();
+                GameType gameType = client.gameMode == null ? null : client.gameMode.getPlayerMode();
                 // In the best case, gameMode would only be queried in sync Ticks, no here
-                if (gameMode == null || !gameMode.isSurvivalLike()) {
-                    client.inGameHud.getChatHud().addMessage(Text.translatable(Main.MOD_ID+".player.invalid_game_mode", gameMode == null ? "unknown" : gameMode.getTranslatableName()).formatted(Formatting.RED));
+                if (gameType == null || !gameType.isSurvival()) {
+                    client.gui.hud.getChat().addClientSystemMessage(Component.translatable(Main.MOD_ID + ".player.invalid_game_mode", gameType == null ? "unknown" : gameType.getLongDisplayName()).copy().withStyle(RED));
                     stop();
                     return;
                 }
@@ -169,45 +172,48 @@ public class SongPlayer implements ClientTickEvents.StartWorldTick {
                 final long now = System.currentTimeMillis();
                 if ((short)note <= Math.round(tick)) {
                     @Nullable BlockPos blockPos = noteBlocks.get(Note.INSTRUMENTS[(byte)(note >> Note.INSTRUMENT_SHIFT)]).get((byte)(note >> Note.NOTE_SHIFT));
-                    if(blockPos == null) {
+                    if (blockPos == null) {
                         // Instrument got likely mapped to "nothing". Skip it
                         index++;
                         continue;
                     }
                     if (!canInteractWith(client.player, blockPos)) {
                         stop();
-                        client.inGameHud.getChatHud().addMessage(Text.translatable(Main.MOD_ID+".player.to_far").formatted(Formatting.RED));
+                        client.gui.hud.getChat().addClientSystemMessage(Component.translatable(Main.MOD_ID + ".player.to_far").copy().withStyle(RED));
                         return;
                     }
-                    Vec3d unit = Vec3d.ofCenter(blockPos, 0.5).subtract(client.player.getEyePos()).normalize();
-                    if((lastLookSentAt == -1L || now - lastLookSentAt >= 50) && last100MsSpanEstimatedPackets < last100MsReducePacketsAfter && (reducePacketsUntil == -1L || reducePacketsUntil < now)) {
-                        client.getNetworkHandler().sendPacket(new PlayerMoveC2SPacket.LookAndOnGround(MathHelper.wrapDegrees((float) (MathHelper.atan2(unit.z, unit.x) * 57.2957763671875) - 90.0f), MathHelper.wrapDegrees((float) (-(MathHelper.atan2(unit.y, Math.sqrt(unit.x * unit.x + unit.z * unit.z)) * 57.2957763671875))), true));
+                    Vec3 unit = Vec3.atCenterOf(blockPos).subtract(client.player.getEyePosition()).normalize();
+                    // At how many packets/100ms should the player just reduce / stop sending packets for a while
+                    int last100MsReducePacketsAfter = 300 / 10;
+                    if ((lastLookSentAt == -1L || now - lastLookSentAt >= 50) && last100MsSpanEstimatedPackets < last100MsReducePacketsAfter && (reducePacketsUntil == -1L || reducePacketsUntil < now)) {
+                        client.getConnection().send(new ServerboundMovePlayerPacket.Rot(Mth.wrapDegrees((float) (Mth.atan2(unit.z, unit.x) * 57.2957763671875) - 90.0f), Mth.wrapDegrees((float) (-(Mth.atan2(unit.y, Math.sqrt(unit.x * unit.x + unit.z * unit.z)) * 57.2957763671875))), true, false));
                         last100MsSpanEstimatedPackets++;
                         lastLookSentAt = now;
-                    }else if(last100MsSpanEstimatedPackets >= last100MsReducePacketsAfter){
+                    } else if (last100MsSpanEstimatedPackets >= last100MsReducePacketsAfter){
                         reducePacketsUntil = Math.max(reducePacketsUntil, now + 500);
                     }
-                    if(last100MsSpanEstimatedPackets < last100MsStopPacketsAfter && (stopPacketsUntil == -1L || stopPacketsUntil < now)) {
+                    int last100MsStopPacketsAfter = 450 / 10;
+                    if (last100MsSpanEstimatedPackets < last100MsStopPacketsAfter && (stopPacketsUntil == -1L || stopPacketsUntil < now)) {
                         // TODO: 5/30/2022 Check if the block needs tuning
                         //client.interactionManager.attackBlock(blockPos, Direction.UP);
-                        client.player.networkHandler.sendPacket(new PlayerActionC2SPacket(PlayerActionC2SPacket.Action.START_DESTROY_BLOCK, blockPos, Direction.UP, 0));
+                        client.player.connection.send(new ServerboundPlayerActionPacket(ServerboundPlayerActionPacket.Action.START_DESTROY_BLOCK, blockPos, Direction.UP, 0));
                         last100MsSpanEstimatedPackets++;
-                    }else if(last100MsSpanEstimatedPackets >= last100MsStopPacketsAfter) {
+                    } else if (last100MsSpanEstimatedPackets >= last100MsStopPacketsAfter) {
                         Main.LOGGER.info("Stopping all packets for a bit!");
                         stopPacketsUntil = Math.max(stopPacketsUntil, now + 250);
                         reducePacketsUntil = Math.max(reducePacketsUntil, now + 10000);
                     }
-                    if(last100MsSpanEstimatedPackets < last100MsReducePacketsAfter && (reducePacketsUntil == -1L || reducePacketsUntil < now)) {
-                        client.player.networkHandler.sendPacket(new PlayerActionC2SPacket(PlayerActionC2SPacket.Action.ABORT_DESTROY_BLOCK, blockPos, Direction.UP, 0));
+                    if (last100MsSpanEstimatedPackets < last100MsReducePacketsAfter && (reducePacketsUntil == -1L || reducePacketsUntil < now)) {
+                        client.player.connection.send(new ServerboundPlayerActionPacket(ServerboundPlayerActionPacket.Action.ABORT_DESTROY_BLOCK, blockPos, Direction.UP, 0));
                         last100MsSpanEstimatedPackets++;
-                    }else if(last100MsSpanEstimatedPackets >= last100MsReducePacketsAfter){
+                    } else if (last100MsSpanEstimatedPackets >= last100MsReducePacketsAfter){
                         reducePacketsUntil = Math.max(reducePacketsUntil, now + 500);
                     }
-                    if((lastSwingSentAt == -1L || now - lastSwingSentAt >= 50) &&last100MsSpanEstimatedPackets < last100MsReducePacketsAfter && (reducePacketsUntil == -1L || reducePacketsUntil < now)) {
-                        client.executeSync(() -> client.player.swingHand(Hand.MAIN_HAND));
+                    if ((lastSwingSentAt == -1L || now - lastSwingSentAt >= 50) &&last100MsSpanEstimatedPackets < last100MsReducePacketsAfter && (reducePacketsUntil == -1L || reducePacketsUntil < now)) {
+                        client.submit(() -> client.player.swing(InteractionHand.MAIN_HAND));
                         lastSwingSentAt = now;
                         last100MsSpanEstimatedPackets++;
-                    }else if(last100MsSpanEstimatedPackets  >= last100MsReducePacketsAfter){
+                    } else if (last100MsSpanEstimatedPackets  >= last100MsReducePacketsAfter){
                         reducePacketsUntil = Math.max(reducePacketsUntil, now + 500);
                     }
 
@@ -215,7 +221,7 @@ public class SongPlayer implements ClientTickEvents.StartWorldTick {
                     if (index >= song.notes.length) {
                         stop();
                         didSongReachEnd = true;
-                        if(loopSong) {
+                        if (loopSong) {
                             start(song);
                         }
                         break;
@@ -225,69 +231,57 @@ public class SongPlayer implements ClientTickEvents.StartWorldTick {
                 }
             }
 
-            if(running) { // Might not be running anymore (prevent small offset on song, even if that is not played anymore)
+            if (running) { // Might not be running anymore (prevent small offset on song, even if that is not played anymore)
                 long elapsedMs = previousPlaybackTickAt != -1L && lastPlaybackTickAt != -1L ? lastPlaybackTickAt - previousPlaybackTickAt : (16); // Assume 16ms if unknown
                 tick += song.millisecondsToTicks(elapsedMs) * speed;
             }
         }
     }
 
-    // TODO: 6/2/2022 Play note blocks every song tick, instead of every tick. That way the song will sound better
-    //      11/1/2023 Playback now done in separate thread. Not ideal but better especially when FPS are low.
     @Override
-    public void onStartTick(ClientWorld world) {
-        MinecraftClient client = MinecraftClient.getInstance();
-        if(world == null || client.world == null || client.player == null) return;
-        if(song == null || !running) return;
+    public void onStartTick(@NonNull ClientLevel world) {
+        Minecraft client = Minecraft.getInstance();
+        if (client.level == null || client.player == null) return;
+        if (song == null || !running) return;
 
         // Clear outdated note predictions
-        ArrayList<BlockPos> outdatedPredictions = new ArrayList<>();
-        for(Map.Entry<BlockPos, Pair<Integer, Long>> entry : notePredictions.entrySet()) {
-            if(entry.getValue().getRight() < System.currentTimeMillis())
-                outdatedPredictions.add(entry.getKey());
-        }
-        for(BlockPos outdatedPrediction : outdatedPredictions) notePredictions.remove(outdatedPrediction);
+        notePredictions.entrySet().removeIf(entry -> entry.getValue().expiryTime() < System.currentTimeMillis());
 
         if (noteBlocks == null) {
             noteBlocks = new HashMap<>();
 
-            ClientPlayerEntity player = client.player;
+            LocalPlayer player = client.player;
 
             // Create list of available noteblock positions per used instrument
             HashMap<NoteBlockInstrument, ArrayList<BlockPos>> noteblocksForInstrument = new HashMap<>();
-            for(NoteBlockInstrument instrument : NoteBlockInstrument.values())
+            for (NoteBlockInstrument instrument : NoteBlockInstrument.values())
                 noteblocksForInstrument.put(instrument, new ArrayList<>());
-            final Vec3d playerEyePos = player.getEyePos();
+            final Vec3 playerEyePos = player.getEyePosition();
 
-            final int maxOffset; // Rough estimates, of which blocks could be in reach
-            if(Main.config.expectedServerVersion == Config.ExpectedServerVersion.v1_20_4_Or_Earlier) {
-                maxOffset = 7;
-            }else if(Main.config.expectedServerVersion == Config.ExpectedServerVersion.v1_20_5_Or_Later) {
-                maxOffset = (int) Math.ceil(player.getBlockInteractionRange() + 1.0 + 1.0);
-            }else if(Main.config.expectedServerVersion == Config.ExpectedServerVersion.All) {
-                maxOffset = Math.min(7, (int) Math.ceil(player.getBlockInteractionRange() + 1.0 + 1.0));
-            }else {
-                throw new NotImplementedException("ExpectedServerVersion Value not implemented: " + Main.config.expectedServerVersion.name());
-            }
+            final int maxOffset = switch (Main.config.expectedServerVersion) {
+                case v1_20_4_Or_Earlier -> 7;
+                case v1_20_5_Or_Later -> (int) Math.ceil(player.blockInteractionRange() + 1.0 + 1.0);
+                case All -> Math.min(7, (int) Math.ceil(player.blockInteractionRange() + 1.0 + 1.0));
+            };
             final ArrayList<Integer> orderedOffsets = new ArrayList<>();
-            for(int offset = 0; offset <= maxOffset; offset++) {
+            for (int offset = 0; offset <= maxOffset; offset++) {
                 orderedOffsets.add(offset);
-                if(offset != 0) orderedOffsets.add(offset * -1);
+                if (offset != 0) orderedOffsets.add(offset * -1);
             }
 
-            for(NoteBlockInstrument instrument : noteblocksForInstrument.keySet().toArray(new NoteBlockInstrument[0])) {
+            for (NoteBlockInstrument instrument : noteblocksForInstrument.keySet().toArray(new NoteBlockInstrument[0])) {
                 for (int y : orderedOffsets) {
                     for (int x : orderedOffsets) {
                         for (int z : orderedOffsets) {
-                            Vec3d vec3d = playerEyePos.add(x, y, z);
-                            BlockPos blockPos = new BlockPos(MathHelper.floor(vec3d.x), MathHelper.floor(vec3d.y), MathHelper.floor(vec3d.z));
+                            Vec3 vec3d = playerEyePos.add(x, y, z);
+                            BlockPos blockPos = BlockPos.containing(vec3d.x, vec3d.y, vec3d.z);
                             if (!canInteractWith(player, blockPos))
                                 continue;
                             BlockState blockState = world.getBlockState(blockPos);
-                            if (!blockState.isOf(Blocks.NOTE_BLOCK) || !world.isAir(blockPos.up()))
+                            if (blockState.getBlock() != Blocks.NOTE_BLOCK || !world.isEmptyBlock(blockPos.above()))
                                 continue;
 
-                            if (blockState.get(Properties.INSTRUMENT) == instrument)
+                            if (blockState.getValue(BlockStateProperties.NOTEBLOCK_INSTRUMENT) == instrument)
                                 noteblocksForInstrument.get(instrument).add(blockPos);
                         }
                     }
@@ -295,11 +289,11 @@ public class SongPlayer implements ClientTickEvents.StartWorldTick {
             }
 
             // Remap instruments for funzies
-            if(!instrumentMap.isEmpty()) {
+            if (!instrumentMap.isEmpty()) {
                 HashMap<NoteBlockInstrument, ArrayList<BlockPos>> newNoteblocksForInstrument = new HashMap<>();
-                for(NoteBlockInstrument orig : noteblocksForInstrument.keySet()) {
+                for (NoteBlockInstrument orig : noteblocksForInstrument.keySet()) {
                     NoteBlockInstrument mappedInstrument = instrumentMap.getOrDefault(orig, orig);
-                    if(mappedInstrument == null) {
+                    if (mappedInstrument == null) {
                         // Instrument got likely mapped to "nothing"
                         newNoteblocksForInstrument.put(orig, null);
                         continue;
@@ -312,9 +306,9 @@ public class SongPlayer implements ClientTickEvents.StartWorldTick {
 
             // Find fitting noteblocks with the least amount of adjustments required (to reduce tuning time)
             ArrayList<Note> capturedNotes = new ArrayList<>();
-            for(Note note : song.uniqueNotes) {
+            for (Note note : song.uniqueNotes) {
                 ArrayList<BlockPos> availableBlocks = noteblocksForInstrument.get(note.instrument());
-                if(availableBlocks == null) {
+                if (availableBlocks == null) {
                     // Note was mapped to "nothing". Pretend it got captured, but just ignore it
                     capturedNotes.add(note);
                     getNotes(note.instrument()).put(note.note(), null);
@@ -322,18 +316,18 @@ public class SongPlayer implements ClientTickEvents.StartWorldTick {
                 }
                 BlockPos bestBlockPos = null;
                 int bestBlockTuningSteps = Integer.MAX_VALUE;
-                for(BlockPos blockPos : availableBlocks) {
+                for (BlockPos blockPos : availableBlocks) {
                     int wantedNote = note.note();
-                    int currentNote = client.world.getBlockState(blockPos).get(Properties.NOTE);
+                    int currentNote = client.level.getBlockState(blockPos).getValue(BlockStateProperties.NOTE);
                     int tuningSteps = wantedNote >= currentNote ? wantedNote - currentNote : (25 - currentNote) + wantedNote;
 
-                    if(tuningSteps < bestBlockTuningSteps) {
+                    if (tuningSteps < bestBlockTuningSteps) {
                         bestBlockPos = blockPos;
                         bestBlockTuningSteps = tuningSteps;
                     }
                 }
 
-                if(bestBlockPos != null) {
+                if (bestBlockPos != null) {
                     capturedNotes.add(note);
                     availableBlocks.remove(bestBlockPos);
                     getNotes(note.instrument()).put(note.note(), bestBlockPos);
@@ -343,13 +337,13 @@ public class SongPlayer implements ClientTickEvents.StartWorldTick {
             ArrayList<Note> missingNotes = new ArrayList<>(song.uniqueNotes);
             missingNotes.removeAll(capturedNotes);
             if (!missingNotes.isEmpty()) {
-                ChatHud chatHud = MinecraftClient.getInstance().inGameHud.getChatHud();
-                chatHud.addMessage(Text.translatable(Main.MOD_ID+".player.invalid_note_blocks").formatted(Formatting.RED));
+                ChatComponent chatHud = Minecraft.getInstance().gui.hud.getChat();
+                chatHud.addClientSystemMessage(Component.translatable(Main.MOD_ID + ".player.invalid_note_blocks").copy().withStyle(RED));
 
                 HashMap<Block, Integer> missing = new HashMap<>();
                 for (Note note : missingNotes) {
                     NoteBlockInstrument mappedInstrument = instrumentMap.getOrDefault(note.instrument(), note.instrument());
-                    if(mappedInstrument == null) continue; // Ignore if mapped to nothing
+                    if (mappedInstrument == null) continue; // Ignore if mapped to nothing
                     Block block = Note.INSTRUMENT_BLOCKS.get(mappedInstrument);
                     Integer got = missing.get(block);
                     if (got == null) got = 0;
@@ -357,7 +351,7 @@ public class SongPlayer implements ClientTickEvents.StartWorldTick {
                 }
 
                 missingInstrumentBlocks = missing;
-                missing.forEach((block, integer) -> chatHud.addMessage(Text.literal(block.getName().getString()+" × "+integer).formatted(Formatting.RED)));
+                missing.forEach((block, integer) -> chatHud.addClientSystemMessage(Component.literal(block.getName().getString() + " × " + integer).copy().withStyle(RED)));
                 stop();
             }
         } else if (!tuned) {
@@ -365,16 +359,16 @@ public class SongPlayer implements ClientTickEvents.StartWorldTick {
 
             int ping = 0;
             {
-                PlayerListEntry playerListEntry;
-                if (client.getNetworkHandler() != null && (playerListEntry = client.getNetworkHandler().getPlayerListEntry(client.player.getGameProfile().getId())) != null)
+                PlayerInfo playerListEntry;
+                if (client.getConnection() != null && (playerListEntry = client.getConnection().getPlayerInfo(client.player.getUUID())) != null)
                     ping = playerListEntry.getLatency();
             }
 
-            if(lastInteractAt != -1L) {
+            if (lastInteractAt != -1L) {
                 // Paper allows 8 interacts per 300 ms (actually 9 it turns out, but lets keep it a bit lower anyway)
                 availableInteracts += ((System.currentTimeMillis() - lastInteractAt) / (310.0f / 8.0f));
                 availableInteracts = Math.min(8f, Math.max(0f, availableInteracts));
-            }else {
+            } else {
                 availableInteracts = 8f;
                 lastInteractAt = System.currentTimeMillis();
             }
@@ -382,23 +376,23 @@ public class SongPlayer implements ClientTickEvents.StartWorldTick {
             int fullyTunedBlocks = 0;
             HashMap<BlockPos, Integer> untunedNotes = new HashMap<>();
             for (Note note : song.uniqueNotes) {
-                if(noteBlocks == null || noteBlocks.get(note.instrument()) == null)
+                if (noteBlocks == null || noteBlocks.get(note.instrument()) == null)
                     continue;
                 BlockPos blockPos = noteBlocks.get(note.instrument()).get(note.note());
-                if(blockPos == null) continue;
+                if (blockPos == null) continue;
                 BlockState blockState = world.getBlockState(blockPos);
-                int assumedNote = notePredictions.containsKey(blockPos) ? notePredictions.get(blockPos).getLeft() : blockState.get(Properties.NOTE);
+                int assumedNote = notePredictions.containsKey(blockPos) ? notePredictions.get(blockPos).assumedNote() : blockState.getValue(BlockStateProperties.NOTE);
 
-                if (blockState.contains(Properties.NOTE)) {
-                    if(assumedNote == note.note() && blockState.get(Properties.NOTE) == note.note())
+                if (blockState.hasProperty(BlockStateProperties.NOTE)) {
+                    if (assumedNote == note.note() && blockState.getValue(BlockStateProperties.NOTE) == note.note())
                         fullyTunedBlocks++;
                     if (assumedNote != note.note()) {
                         if (!canInteractWith(client.player, blockPos)) {
                             stop();
-                            client.inGameHud.getChatHud().addMessage(Text.translatable(Main.MOD_ID+".player.to_far").formatted(Formatting.RED));
+                            client.gui.hud.getChat().addClientSystemMessage(Component.translatable(Main.MOD_ID + ".player.to_far").copy().withStyle(RED));
                             return;
                         }
-                        untunedNotes.put(blockPos, blockState.get(Properties.NOTE));
+                        untunedNotes.put(blockPos, blockState.getValue(BlockStateProperties.NOTE));
                     }
                 } else {
                     noteBlocks = null;
@@ -406,18 +400,18 @@ public class SongPlayer implements ClientTickEvents.StartWorldTick {
                 }
             }
 
-            if(tuneInitialUntunedBlocks == -1 || tuneInitialUntunedBlocks < untunedNotes.size())
+            if (tuneInitialUntunedBlocks == -1 || tuneInitialUntunedBlocks < untunedNotes.size())
                 tuneInitialUntunedBlocks = untunedNotes.size();
 
             int existingUniqueNotesCount = 0;
-            for(Note n : song.uniqueNotes) {
-                if(noteBlocks.get(n.instrument()).get(n.note()) != null)
+            for (Note n : song.uniqueNotes) {
+                if (noteBlocks.get(n.instrument()).get(n.note()) != null)
                     existingUniqueNotesCount++;
             }
 
-            if(untunedNotes.isEmpty() && fullyTunedBlocks == existingUniqueNotesCount) {
+            if (untunedNotes.isEmpty() && fullyTunedBlocks == existingUniqueNotesCount) {
                 // Wait roundrip + 100ms before considering tuned after changing notes (in case the server rejects an interact)
-                if(lastInteractAt == -1 || System.currentTimeMillis() - lastInteractAt >= ping * 2 + 100) {
+                if (lastInteractAt == -1 || System.currentTimeMillis() - lastInteractAt >= ping * 2L + 100) {
                     tuned = true;
                     pausePlaybackUntil = System.currentTimeMillis() + (long) (Math.abs(Main.config.delayPlaybackStartBySecs) * 1000);
                     tuneInitialUntunedBlocks = -1;
@@ -428,10 +422,10 @@ public class SongPlayer implements ClientTickEvents.StartWorldTick {
             BlockPos lastBlockPos = null;
             int lastTunedNote = Integer.MIN_VALUE;
             float roughTuneProgress = 1 - (untunedNotes.size() / Math.max(tuneInitialUntunedBlocks + 0f, 1f));
-            while(availableInteracts >= 1f && untunedNotes.size() > 0) {
+            while (availableInteracts >= 1f && !untunedNotes.isEmpty()) {
                 BlockPos blockPos = null;
                 int searches = 0;
-                while(blockPos == null) {
+                while (blockPos == null) {
                     searches++;
                     // Find higher note
                     for (Map.Entry<BlockPos, Integer> entry : untunedNotes.entrySet()) {
@@ -450,31 +444,31 @@ public class SongPlayer implements ClientTickEvents.StartWorldTick {
                         }
                     }
                     // Not found. Reset last note
-                    if(blockPos == null)
+                    if (blockPos == null)
                         lastTunedNote = Integer.MIN_VALUE;
-                    if(blockPos == null && searches > 1) {
+                    if (blockPos == null && searches > 1) {
                         // Something went wrong. Take any note (one should at least exist here)
                         blockPos = untunedNotes.keySet().toArray(new BlockPos[0])[0];
                         break;
                     }
                 }
-                if(blockPos == null) return; // Something went very, very wrong!
+                if (blockPos == null) return; // Something went very, very wrong!
 
                 lastTunedNote = untunedNotes.get(blockPos);
                 untunedNotes.remove(blockPos);
-                int assumedNote = notePredictions.containsKey(blockPos) ? notePredictions.get(blockPos).getLeft() : client.world.getBlockState(blockPos).get(Properties.NOTE);
-                notePredictions.put(blockPos, new Pair<>((assumedNote + 1) % 25, System.currentTimeMillis() + ping * 2 + 100));
-                client.interactionManager.interactBlock(client.player, Hand.MAIN_HAND, new BlockHitResult(Vec3d.of(blockPos), Direction.UP, blockPos, false));
+                int assumedNote = notePredictions.containsKey(blockPos) ? notePredictions.get(blockPos).assumedNote() : client.level.getBlockState(blockPos).getValue(BlockStateProperties.NOTE);
+                notePredictions.put(blockPos, new NotePrediction((assumedNote + 1) % 25, System.currentTimeMillis() + ping * 2L + 100));
+                client.gameMode.useItemOn(client.player, InteractionHand.MAIN_HAND, new BlockHitResult(Vec3.atCenterOf(blockPos), Direction.UP, blockPos, false));
                 lastInteractAt = System.currentTimeMillis();
                 availableInteracts -= 1f;
                 lastBlockPos = blockPos;
             }
-            if(lastBlockPos != null) {
+            if (lastBlockPos != null) {
                 // Turn head into spinning with time and lookup up further the further tuning is progressed
                 //client.getNetworkHandler().sendPacket(new PlayerMoveC2SPacket.LookAndOnGround(((float) (System.currentTimeMillis() % 2000)) * (360f/2000f), (1 - roughTuneProgress) * 180 - 90, true));
-                client.player.swingHand(Hand.MAIN_HAND);
+                client.player.swing(InteractionHand.MAIN_HAND);
             }
-        }else if((playbackThread == null || !playbackThread.isAlive()) && running && Main.config.disableAsyncPlayback) {
+        } else if ((playbackThread == null || !playbackThread.isAlive()) && running && Main.config.disableAsyncPlayback) {
             // Sync playback (off by default). Replacement for playback thread
             try {
                 tickPlayback();
@@ -492,25 +486,35 @@ public class SongPlayer implements ClientTickEvents.StartWorldTick {
     // Before 1.20.5, the server limits interacts to 6 Blocks from Player Eye to Block Center
     // With 1.20.5 and later, the server does a more complex check, to the closest point of a full block hitbox
     // (max distance is BlockInteractRange + 1.0).
-    private boolean canInteractWith(ClientPlayerEntity player, BlockPos blockPos) {
-        final Vec3d eyePos = player.getEyePos();
-        if(Main.config.expectedServerVersion == Config.ExpectedServerVersion.v1_20_4_Or_Earlier) {
-            return eyePos.squaredDistanceTo(blockPos.toCenterPos()) <= 6.0 * 6.0;
-        }else if(Main.config.expectedServerVersion == Config.ExpectedServerVersion.v1_20_5_Or_Later) {
-            double blockInteractRange = player.getBlockInteractionRange() + 1.0;
-            return new Box(blockPos).squaredMagnitude(eyePos) < blockInteractRange * blockInteractRange;
-        }else if(Main.config.expectedServerVersion == Config.ExpectedServerVersion.All) {
-            // Require both checks to succeed (aka use worst distance)
-            double blockInteractRange = player.getBlockInteractionRange() + 1.0;
-            return eyePos.squaredDistanceTo(blockPos.toCenterPos()) <= 6.0 * 6.0
-                    && new Box(blockPos).squaredMagnitude(eyePos) < blockInteractRange * blockInteractRange;
-        }else {
-            throw new NotImplementedException("ExpectedServerVersion Value not implemented: " + Main.config.expectedServerVersion.name());
-        }
+    private boolean canInteractWith(LocalPlayer player, BlockPos blockPos) {
+        final Vec3 eyePos = player.getEyePosition();
+        return switch (Main.config.expectedServerVersion) {
+            case v1_20_4_Or_Earlier -> eyePos.distanceToSqr(Vec3.atCenterOf(blockPos)) <= 6.0 * 6.0;
+            case v1_20_5_Or_Later -> {
+                double blockInteractRange = player.blockInteractionRange() + 1.0;
+                yield new AABB(blockPos).distanceToSqr(eyePos) < blockInteractRange * blockInteractRange;
+            }
+            case All -> {
+                // Require both checks to succeed (aka use worst distance)
+                double blockInteractRange = player.blockInteractionRange() + 1.0;
+                yield eyePos.distanceToSqr(Vec3.atCenterOf(blockPos)) <= 6.0 * 6.0
+                        && new AABB(blockPos).distanceToSqr(eyePos) < blockInteractRange * blockInteractRange;
+            }
+        };
     }
 
     public double getSongElapsedSeconds() {
-        if(song == null) return 0;
+        if (song == null) return 0;
         return song.ticksToMilliseconds(tick) / 1000;
+    }
+
+    public synchronized void setSongElapsedSeconds(double seconds) {
+        if (song == null) return;
+        tick = song.millisecondsToTicks((long)(seconds * 1000));
+        index = 0;
+        for (int i = 0; i < song.notes.length; i++) {
+            if ((short)song.notes[i] > Math.round(tick)) break;
+            index = i;
+        }
     }
 }
